# configfile

./: CMakeLists.txt  README.md  expected.cfg.in  test.cfg.in
include/: config_file.hpp
src/: config_file.cpp  demo.cpp
